// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debugger; pauses for 1`] = `
Object {
  "head": Object {
    "i": 0,
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`debugger; pauses for 2`] = `
Object {
  "head": Object {
    "_copy_of_i": 0,
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`debugger; pauses for 3`] = `
Object {
  "head": Object {
    "i": 0,
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`debugger; pauses for 4`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 10,
      },
    ],
    "callee": Node {
      "end": 78,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 7,
        },
        "start": Position {
          "column": 2,
          "line": 7,
        },
      },
      "name": "a",
      "start": 77,
      "type": "Identifier",
    },
    "end": 82,
    "loc": SourceLocation {
      "end": Position {
        "column": 7,
        "line": 7,
      },
      "start": Position {
        "column": 2,
        "line": 7,
      },
    },
    "start": 77,
    "type": "CallExpression",
  },
  "head": Object {
    "x": 10,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`debugger; pauses for 5`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; pauses for 6`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; pauses for 7`] = `""`;

exports[`debugger; pauses while 1`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 10,
      },
    ],
    "callee": Node {
      "end": 78,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 8,
        },
        "start": Position {
          "column": 2,
          "line": 8,
        },
      },
      "name": "a",
      "start": 77,
      "type": "Identifier",
    },
    "end": 82,
    "loc": SourceLocation {
      "end": Position {
        "column": 7,
        "line": 8,
      },
      "start": Position {
        "column": 2,
        "line": 8,
      },
    },
    "start": 77,
    "type": "CallExpression",
  },
  "head": Object {
    "x": 10,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`debugger; pauses while 2`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; pauses while 3`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; pauses while 4`] = `""`;

exports[`debugger; statement basic test 1`] = `
Object {
  "head": Object {
    "a": 2,
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement basic test 2`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement basic test 3`] = `""`;

exports[`debugger; statement execution sequence 1`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement execution sequence 2`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement execution sequence 3`] = `""`;

exports[`debugger; statement hoisting 1`] = `
Object {
  "head": Object {
    "b": Symbol(Used to implement hoisting),
    "c": Symbol(Used to implement hoisting),
    "z": Symbol(Used to implement hoisting),
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement hoisting 2`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 10,
      },
    ],
    "callee": Node {
      "end": 108,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 9,
        },
        "start": Position {
          "column": 2,
          "line": 9,
        },
      },
      "name": "a",
      "start": 107,
      "type": "Identifier",
    },
    "end": 112,
    "loc": SourceLocation {
      "end": Position {
        "column": 7,
        "line": 9,
      },
      "start": Position {
        "column": 2,
        "line": 9,
      },
    },
    "start": 107,
    "type": "CallExpression",
  },
  "head": Object {
    "x": 10,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`debugger; statement hoisting 3`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement hoisting 4`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement hoisting 5`] = `""`;

exports[`debugger; statement in function 1`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 10,
      },
    ],
    "callee": Node {
      "end": 53,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 6,
        },
        "start": Position {
          "column": 2,
          "line": 6,
        },
      },
      "name": "a",
      "start": 52,
      "type": "Identifier",
    },
    "end": 57,
    "loc": SourceLocation {
      "end": Position {
        "column": 7,
        "line": 6,
      },
      "start": Position {
        "column": 2,
        "line": 6,
      },
    },
    "start": 52,
    "type": "CallExpression",
  },
  "head": Object {
    "x": 10,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`debugger; statement in function 2`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement in function 3`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement in function 4`] = `""`;

exports[`debugger; statement test function scope 1`] = `
Object {
  "head": Object {
    "b": 100,
    "c": 200,
    "d": 300,
    "e": 30000,
    "f": 60000,
    "g": 2000,
    "h": 2300,
    "i": 666.6666666666666,
    "j": 600,
    "k": 0.0033333333333333335,
    "l": 0.5,
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement test function scope 2`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 10,
      },
    ],
    "callee": Node {
      "end": 266,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 17,
        },
        "start": Position {
          "column": 2,
          "line": 17,
        },
      },
      "name": "a",
      "start": 265,
      "type": "Identifier",
    },
    "end": 270,
    "loc": SourceLocation {
      "end": Position {
        "column": 7,
        "line": 17,
      },
      "start": Position {
        "column": 2,
        "line": 17,
      },
    },
    "start": 265,
    "type": "CallExpression",
  },
  "head": Object {
    "x": 10,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`debugger; statement test function scope 3`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement test function scope 4`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`debugger; statement test function scope 5`] = `""`;

exports[`setBreakpointAtLine basic 1`] = `
Object {
  "head": Object {
    "a": Symbol(Used to implement hoisting),
    "b": Symbol(Used to implement hoisting),
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine basic 2`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine basic 3`] = `""`;

exports[`setBreakpointAtLine for loops 1`] = `
Object {
  "head": Object {
    "b": Symbol(Used to implement hoisting),
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine for loops 2`] = `
Object {
  "head": Object {
    "i": 1,
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine for loops 3`] = `
Object {
  "head": Object {
    "_copy_of_i": 1,
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine for loops 4`] = `
Object {
  "head": Object {
    "i": 1,
  },
  "id": Any<String>,
  "name": "blockEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine for loops 5`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine for loops 6`] = `""`;

exports[`setBreakpointAtLine for loops 7`] = `
Array [
  Object {
    "head": Object {
      "b": Symbol(Used to implement hoisting),
    },
    "id": "95",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "i": 2,
    },
    "id": "94",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "_copy_of_i": 2,
    },
    "id": "93",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "i": 2,
    },
    "id": "89",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "87",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine for loops 8`] = `""`;

exports[`setBreakpointAtLine for loops 9`] = `
Array [
  Object {
    "head": Object {
      "b": Symbol(Used to implement hoisting),
    },
    "id": "98",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "i": 4,
    },
    "id": "97",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "_copy_of_i": 4,
    },
    "id": "96",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "i": 4,
    },
    "id": "89",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "87",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine for loops 10`] = `""`;

exports[`setBreakpointAtLine for loops 11`] = `
Array [
  Object {
    "head": Object {
      "b": Symbol(Used to implement hoisting),
    },
    "id": "101",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "i": 8,
    },
    "id": "100",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "_copy_of_i": 8,
    },
    "id": "99",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "i": 8,
    },
    "id": "89",
    "name": "blockEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "87",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine for loops 12`] = `""`;

exports[`setBreakpointAtLine for loops 13`] = `
Array [
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "87",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine for loops 14`] = `""`;

exports[`setBreakpointAtLine function 1 1`] = `
Object {
  "head": Object {
    "a": Symbol(Used to implement hoisting),
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 1 2`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 1 3`] = `""`;

exports[`setBreakpointAtLine function 2 1`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": "bob",
      },
    ],
    "callee": Node {
      "end": 43,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 5,
        },
        "start": Position {
          "column": 2,
          "line": 5,
        },
      },
      "name": "a",
      "start": 42,
      "type": "Identifier",
    },
    "end": 50,
    "loc": SourceLocation {
      "end": Position {
        "column": 10,
        "line": 5,
      },
      "start": Position {
        "column": 2,
        "line": 5,
      },
    },
    "start": 42,
    "type": "CallExpression",
  },
  "head": Object {
    "x": "bob",
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 2 2`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 2 3`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 2 4`] = `""`;

exports[`setBreakpointAtLine function 3 1`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 3 2`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 3 3`] = `""`;

exports[`setBreakpointAtLine function 4 1`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 4 2`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine function 4 3`] = `""`;

exports[`setBreakpointAtLine granularity 1 1`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 1,
      },
    ],
    "callee": Node {
      "end": 78,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 7,
        },
        "start": Position {
          "column": 2,
          "line": 7,
        },
      },
      "name": "a",
      "start": 77,
      "type": "Identifier",
    },
    "end": 81,
    "loc": SourceLocation {
      "end": Position {
        "column": 6,
        "line": 7,
      },
      "start": Position {
        "column": 2,
        "line": 7,
      },
    },
    "start": 77,
    "type": "CallExpression",
  },
  "head": Object {
    "ctrlf": 1,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 1 2`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 1 3`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 1 4`] = `""`;

exports[`setBreakpointAtLine granularity 1 5`] = `
Array [
  Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": -1,
        },
      ],
      "callee": Node {
        "end": 58,
        "loc": SourceLocation {
          "end": Position {
            "column": 5,
            "line": 5,
          },
          "start": Position {
            "column": 4,
            "line": 5,
          },
        },
        "name": "a",
        "start": 57,
        "type": "Identifier",
      },
      "end": 69,
      "loc": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 5,
        },
        "start": Position {
          "column": 4,
          "line": 5,
        },
      },
      "start": 57,
      "type": "CallExpression",
    },
    "head": Object {
      "ctrlf": -1,
    },
    "id": "62",
    "name": "a",
    "tail": null,
  },
  Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": 0,
        },
      ],
      "callee": Node {
        "end": 58,
        "loc": SourceLocation {
          "end": Position {
            "column": 5,
            "line": 5,
          },
          "start": Position {
            "column": 4,
            "line": 5,
          },
        },
        "name": "a",
        "start": 57,
        "type": "Identifier",
      },
      "end": 69,
      "loc": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 5,
        },
        "start": Position {
          "column": 4,
          "line": 5,
        },
      },
      "start": 57,
      "type": "CallExpression",
    },
    "head": Object {
      "ctrlf": 0,
    },
    "id": "59",
    "name": "a",
    "tail": null,
  },
  Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": 1,
        },
      ],
      "callee": Node {
        "end": 78,
        "loc": SourceLocation {
          "end": Position {
            "column": 3,
            "line": 7,
          },
          "start": Position {
            "column": 2,
            "line": 7,
          },
        },
        "name": "a",
        "start": 77,
        "type": "Identifier",
      },
      "end": 81,
      "loc": SourceLocation {
        "end": Position {
          "column": 6,
          "line": 7,
        },
        "start": Position {
          "column": 2,
          "line": 7,
        },
      },
      "start": 77,
      "type": "CallExpression",
    },
    "head": Object {
      "ctrlf": 1,
    },
    "id": "56",
    "name": "a",
    "tail": null,
  },
  Object {
    "head": Object {
      "a": [Function],
    },
    "id": "55",
    "name": "programEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "54",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine granularity 1 6`] = `""`;

exports[`setBreakpointAtLine granularity 2 1`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": -1,
      },
    ],
    "callee": Node {
      "end": 58,
      "loc": SourceLocation {
        "end": Position {
          "column": 5,
          "line": 5,
        },
        "start": Position {
          "column": 4,
          "line": 5,
        },
      },
      "name": "a",
      "start": 57,
      "type": "Identifier",
    },
    "end": 69,
    "loc": SourceLocation {
      "end": Position {
        "column": 16,
        "line": 5,
      },
      "start": Position {
        "column": 4,
        "line": 5,
      },
    },
    "start": 57,
    "type": "CallExpression",
  },
  "head": Object {
    "ctrlf": -1,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 2 2`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 0,
      },
    ],
    "callee": Node {
      "end": 58,
      "loc": SourceLocation {
        "end": Position {
          "column": 5,
          "line": 5,
        },
        "start": Position {
          "column": 4,
          "line": 5,
        },
      },
      "name": "a",
      "start": 57,
      "type": "Identifier",
    },
    "end": 69,
    "loc": SourceLocation {
      "end": Position {
        "column": 16,
        "line": 5,
      },
      "start": Position {
        "column": 4,
        "line": 5,
      },
    },
    "start": 57,
    "type": "CallExpression",
  },
  "head": Object {
    "ctrlf": 0,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 2 3`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 1,
      },
    ],
    "callee": Node {
      "end": 78,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 7,
        },
        "start": Position {
          "column": 2,
          "line": 7,
        },
      },
      "name": "a",
      "start": 77,
      "type": "Identifier",
    },
    "end": 81,
    "loc": SourceLocation {
      "end": Position {
        "column": 6,
        "line": 7,
      },
      "start": Position {
        "column": 2,
        "line": 7,
      },
    },
    "start": 77,
    "type": "CallExpression",
  },
  "head": Object {
    "ctrlf": 1,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 2 4`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 2 5`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 2 6`] = `""`;

exports[`setBreakpointAtLine granularity 2 7`] = `
Array [
  Object {
    "head": Object {
      "a": [Function],
    },
    "id": "66",
    "name": "programEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "65",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine granularity 2 8`] = `""`;

exports[`setBreakpointAtLine granularity 3 1`] = `
Object {
  "callExpression": Object {
    "arguments": Array [
      Object {
        "loc": undefined,
        "type": "Literal",
        "value": 1,
      },
    ],
    "callee": Node {
      "end": 78,
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 7,
        },
        "start": Position {
          "column": 2,
          "line": 7,
        },
      },
      "name": "a",
      "start": 77,
      "type": "Identifier",
    },
    "end": 81,
    "loc": SourceLocation {
      "end": Position {
        "column": 6,
        "line": 7,
      },
      "start": Position {
        "column": 2,
        "line": 7,
      },
    },
    "start": 77,
    "type": "CallExpression",
  },
  "head": Object {
    "ctrlf": 1,
  },
  "id": Any<String>,
  "name": "a",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 3 2`] = `
Object {
  "head": Object {
    "a": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 3 3`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine granularity 3 4`] = `""`;

exports[`setBreakpointAtLine granularity 3 5`] = `
Array [
  Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": 0,
        },
      ],
      "callee": Node {
        "end": 58,
        "loc": SourceLocation {
          "end": Position {
            "column": 5,
            "line": 5,
          },
          "start": Position {
            "column": 4,
            "line": 5,
          },
        },
        "name": "a",
        "start": 57,
        "type": "Identifier",
      },
      "end": 69,
      "loc": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 5,
        },
        "start": Position {
          "column": 4,
          "line": 5,
        },
      },
      "start": 57,
      "type": "CallExpression",
    },
    "head": Object {
      "ctrlf": 0,
    },
    "id": "81",
    "name": "a",
    "tail": null,
  },
  Object {
    "callExpression": Object {
      "arguments": Array [
        Object {
          "loc": undefined,
          "type": "Literal",
          "value": 1,
        },
      ],
      "callee": Node {
        "end": 78,
        "loc": SourceLocation {
          "end": Position {
            "column": 3,
            "line": 7,
          },
          "start": Position {
            "column": 2,
            "line": 7,
          },
        },
        "name": "a",
        "start": 77,
        "type": "Identifier",
      },
      "end": 81,
      "loc": SourceLocation {
        "end": Position {
          "column": 6,
          "line": 7,
        },
        "start": Position {
          "column": 2,
          "line": 7,
        },
      },
      "start": 77,
      "type": "CallExpression",
    },
    "head": Object {
      "ctrlf": 1,
    },
    "id": "78",
    "name": "a",
    "tail": null,
  },
  Object {
    "head": Object {
      "a": [Function],
    },
    "id": "77",
    "name": "programEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "76",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine granularity 3 6`] = `""`;

exports[`setBreakpointAtLine granularity 3 7`] = `
Array [
  Object {
    "head": Object {
      "a": [Function],
    },
    "id": "77",
    "name": "programEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "76",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine granularity 3 8`] = `""`;

exports[`setBreakpointAtLine while loops 1`] = `
Object {
  "head": Object {
    "a": 9,
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine while loops 2`] = `
Object {
  "head": Object {
    "$accumulate": [Function],
    "$append": [Function],
    "$build_list": [Function],
    "$enum_list": [Function],
    "$filter": [Function],
    "$length": [Function],
    "$list_to_string": [Function],
    "$map": [Function],
    "$remove": [Function],
    "$remove_all": [Function],
    "$reverse": [Function],
    "__access_export__": [Function],
    "__access_named_export__": [Function],
    "accumulate": [Function],
    "append": [Function],
    "build_list": [Function],
    "build_stream": [Function],
    "enum_list": [Function],
    "enum_stream": [Function],
    "equal": [Function],
    "eval_stream": [Function],
    "filter": [Function],
    "for_each": [Function],
    "integers_from": [Function],
    "is_stream": [Function],
    "length": [Function],
    "list_ref": [Function],
    "list_to_stream": [Function],
    "list_to_string": [Function],
    "map": [Function],
    "member": [Function],
    "remove": [Function],
    "remove_all": [Function],
    "reverse": [Function],
    "stream_append": [Function],
    "stream_filter": [Function],
    "stream_for_each": [Function],
    "stream_length": [Function],
    "stream_map": [Function],
    "stream_member": [Function],
    "stream_ref": [Function],
    "stream_remove": [Function],
    "stream_remove_all": [Function],
    "stream_reverse": [Function],
    "stream_to_list": [Function],
  },
  "id": Any<String>,
  "name": "programEnvironment",
  "tail": null,
}
`;

exports[`setBreakpointAtLine while loops 3`] = `""`;

exports[`setBreakpointAtLine while loops 4`] = `
Array [
  Object {
    "head": Object {
      "a": 6,
    },
    "id": "103",
    "name": "programEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "102",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine while loops 5`] = `""`;

exports[`setBreakpointAtLine while loops 6`] = `
Array [
  Object {
    "head": Object {
      "a": 3,
    },
    "id": "103",
    "name": "programEnvironment",
    "tail": null,
  },
  Object {
    "head": Object {
      "$accumulate": [Function],
      "$append": [Function],
      "$build_list": [Function],
      "$enum_list": [Function],
      "$filter": [Function],
      "$length": [Function],
      "$list_to_string": [Function],
      "$map": [Function],
      "$remove": [Function],
      "$remove_all": [Function],
      "$reverse": [Function],
      "__access_export__": [Function],
      "__access_named_export__": [Function],
      "accumulate": [Function],
      "append": [Function],
      "build_list": [Function],
      "build_stream": [Function],
      "enum_list": [Function],
      "enum_stream": [Function],
      "equal": [Function],
      "eval_stream": [Function],
      "filter": [Function],
      "for_each": [Function],
      "integers_from": [Function],
      "is_stream": [Function],
      "length": [Function],
      "list_ref": [Function],
      "list_to_stream": [Function],
      "list_to_string": [Function],
      "map": [Function],
      "member": [Function],
      "remove": [Function],
      "remove_all": [Function],
      "reverse": [Function],
      "stream_append": [Function],
      "stream_filter": [Function],
      "stream_for_each": [Function],
      "stream_length": [Function],
      "stream_map": [Function],
      "stream_member": [Function],
      "stream_ref": [Function],
      "stream_remove": [Function],
      "stream_remove_all": [Function],
      "stream_reverse": [Function],
      "stream_to_list": [Function],
    },
    "id": "102",
    "name": "programEnvironment",
    "tail": null,
  },
]
`;

exports[`setBreakpointAtLine while loops 7`] = `""`;
